# agentic-spectrumdetect

./: .gitignore  ETTUS_B210_SETUP.md  README.md  SPARK_BUILD_STATUS.md  build_opencv_cuda.sh  build_opencv_cuda_v2.sh  compose.yml  env.example  env.example.backup  install_deps_spark.sh  vllm_config.yaml
agent/: README.md  pyproject.toml
agent/mcp/: spectrum_mcp.json
agent/src/agent/: agent.py  server.py  settings.py
docs/: DASHBOARD_INTEGRATION.md  SDR_INTEGRATION.md
spectrum_server/: Dockerfile  Makefile  README.md  pyproject.toml
spectrum_server/src/spectrum_server/: radios_work.py  sdr_control.py  server.py  settings.py  spectrum_core_client.py  spectrum_stream.py
spectrum_server/src/spectrum_server/api/: __init__.py  dashboard.py  dsp_filters.py  iq_capture.py  radios_work.py  sdr_control.py  spectrum_analysis.py
spectrum_server/src/spectrum_server/schema/: dsp_filters.py  iq_capture.py  sdr_control.py  spectrum_analysis.py
spectrum_server/tests/: __init__.py  test_spectrum_core_client.py
tensorrt_yolo_engine/: CMakeLists.txt  Dockerfile  do_run_cmake
tensorrt_yolo_engine/src/apps/spectrum_core/: spectrum_core.cu  spectrum_core.h  spectrum_core_server.cpp
tensorrt_yolo_engine/src/apps/tye_app/: tye_app_includes.h
tensorrt_yolo_engine/src/apps/tye_app/tye_sp/: sp_frontend.cpp  sp_frontend.h  uhd_b210_radio.cpp  uhd_b210_radio.h
