[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.116.1",
    "uvicorn>=0.35.0",
    #"pydantic-ai-slim[openai,mcp]>=0.7.5",
    "pydantic-ai>=1.6.0",
    "pydantic-settings>=2.10.1",
    "rich>=14.1.0",
    "httpx>=0.28.1",
    "tiktoken",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
    "mypy"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent = ["*.html", "*.js", "*.css", "*.ts"]
